[package]
name = "narst"
version = "0.1.0"
authors = ["Adrian Borucki <ab@synthillect.ai>"]
edition = "2021"
description = "A Rust implementation of Non-Axiomatic Reasoning System (NARS)"
readme = "README.md"
repository = "https://github.com/ntoxeg/narst"
license = "Apache-2.0"
keywords = ["nars", "ai"]
categories = ["science"]

[dependencies]
priority-queue = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "nars"
